# CleanBoost

./: .gitignore  LICENSE  MANIFEST.in  README.md  daemon.py  install.sh  main.py  pyproject.toml
.github/workflows/: release.yml
npm-cleanboost-stub/: .npmignore  LICENSE  README.md  package.json
npm-cleanboost-stub/scripts/: postinstall.js
npm-cli/: README.md  package.json
npm-cli/scripts/: install.js  uninstall.js
packaging/: build_dmg.sh  build_windows.bat  make_icon.py
packaging/homebrew/: README.md  cleanboost.rb  cleenboost.rb
packaging/winget/: README.md
packaging/winget/manifests/f/Freebuff/Cleanboost/3.1.1/: Freebuff.Cleanboost.installer.yaml  Freebuff.Cleanboost.locale.en-US.yaml  Freebuff.Cleanboost.yaml
packaging/winget/manifests/f/Freebuff/Cleenboost/3.1.1/: Freebuff.Cleenboost.installer.yaml  Freebuff.Cleenboost.locale.en-US.yaml  Freebuff.Cleenboost.yaml
scripts/: cleanboost.bat  cleanboost.command  cleanboost.desktop  cleanboost.launchd.plist.template
tests/: test_cleanboost.py
